force-app/main/default/objects/price_configurator_factors__c/price_configurator_factors__c.object-meta.xml
<CustomObject>
    <label>price configurator detail</label>
    <nameField>
        <label>price configurator factors-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>price configurator details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>