force-app/main/default/objects/price_configurator_factors__c/fields/configuration_category__c.field-meta.xml
<CustomField>
    <fullName>configuration_category__c</fullName>
    <label>configuration category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Topping</fullName>
            </value>
            <value>
                <fullName>wrapper</fullName>
            </value>
            <value>
                <fullName>filling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>