force-app/main/default/objects/price_configurator_factors__c/fields/factor__c.field-meta.xml
<CustomField>
    <fullName>factor__c</fullName>
    <label>factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>