force-app/main/default/objects/price_configurator_factors__c/fields/price__c.field-meta.xml
<CustomField>
    <fullName>price__c</fullName>
    <label>price per kg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>